# zoya-easy-code

./: .coverage  .coveragerc  .gitattributes  .gitignore  .mailmap  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_STUDIO.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DECISIONS.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  STREAK.md  STYLE_GUIDE.md  TASKS.md  TODO.md  Zoya 4.0 Implementation Plan.md  Zoya Snake.spec  main.py  package-lock.json  package.json  play_snake.bat  pyproject.toml  run_all_tests.py  run_snake.py  server.py  test_ai_platform.py  test_cloud_platform.py  test_data_science.py  test_desktop_framework.py  test_devops_module.py  test_enterprise_robotics.py  test_ide_platform.py  (+11 more)
--help/: README.md  main.zoya
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml  stale.yml  streak.yml  test.yml
docs/: ZOYA_STUDIO.md  ZOYA_STUDIO_AI_PROVIDERS.md  ZOYA_STUDIO_ARCHITECTURE.md  ZOYA_STUDIO_MEMORY.md  ZOYA_STUDIO_PLUGIN_DEV.md  index.md
examples/: 3d_cube.zoya  README.md  ai_chat.zoya  ai_npc.zoya  calculator.zoya  csv_demo.zoya  enum_demo.md  enum_demo.zoya  fibonacci.zoya  file_demo.zoya  hello-world.zoya  hello.zoya  http_client.zoya  lists.zoya  loops.zoya  match_demo.zoya  math_demo.zoya  multiplayer_demo.zoya  network_demo.zoya  particles.zoya  physics_demo.zoya  platformer.zoya  pong.zoya  snake.zoya  sqlite_demo.zoya  strings.zoya  todo.md  todo.zoya
myproject/: main.zoya  zoya.toml
src/: diagnostics.ts  types.ts
src/ai/: agent.ts  index.ts  llm.ts  speech.ts  vector.ts  vision.ts  workflow.ts
src/cli/: index.ts
src/cloud/: analytics.ts  auth.ts  database.ts  index.ts  leaderboard.ts  multiplayer.ts  realtime.ts  storage.ts
src/compiler/: diagnostics.ts
src/debugger/: index.ts
src/docs/: index.ts  markdown.ts  tutorials.ts
src/editor/: animation-editor.ts  hierarchy.ts  index.ts  inspector.ts  material-editor.ts  physics-editor.ts
src/engine/: core.ts  index.ts
src/lsp/: index.ts
src/runtime/: index.ts
src/security/: index.ts
src/templates/: content.ts  index.ts
src/testing/: assert.ts  benchmark.ts  coverage.ts  index.ts
src/vm/: chunk.ts  index.ts  opcodes.ts
tests/: conftest.py  test_basic.py  test_builtins.py  test_cli.py  test_debugger.py  test_docs.py  test_environment.py  test_formatter.py  test_integration.py  test_interpreter.py  test_lexer.py  test_linter.py  test_parser.py  test_profiler.py  test_project_generator.py  test_stdlib.py  test_studio_ai_manager.py  test_studio_commands.py  test_studio_config.py  test_studio_crypto.py  test_studio_file_manager.py  test_studio_full_flow.py  test_studio_git_manager.py  test_studio_integration.py  test_studio_plugins.py  test_studio_project_manager.py  test_studio_templates.py
tests/ai/: agent.test.ts  ai.test.ts  llm.test.ts  vector.test.ts  workflow.test.ts
tests/cli/: commands.test.ts
tests/cloud/: auth.test.ts  database.test.ts  realtime.test.ts  storage.test.ts
tests/compiler/: ir.test.ts  optimizer.test.ts  parser.test.ts  semantic.test.ts
tests/debugger/: debugger.test.ts
tests/docs/: docs.test.ts  tutorials.test.ts
tests/editor/: editor.test.ts  hierarchy.test.ts  inspector.test.ts
tests/engine/: ecs.test.ts  engine.test.ts  physics.test.ts  scene.test.ts
tests/lsp/: lsp.test.ts
tests/runtime/: gc.test.ts
tests/security/: permissions.test.ts  sandbox.test.ts
tests/testing/: assert.test.ts  benchmark.test.ts  coverage.test.ts  runner.test.ts
tests/vm/: chunk.test.ts  vm.test.ts
zoya/: __init__.py  __main__.py  ast.py  builtins.py  cli.py  environment.py  errors.py  interpreter.py  lexer.py  parser.py  repl.py  version.py
zoya/ai/: __init__.py  agent.py  embeddings.py  llm.py  memory.py  rag.py  tools.py
zoya/cloud/: __init__.py  analytics.py  auth.py  database.py  leaderboard.py  multiplayer.py  realtime.py  storage.py
zoya/data/: __init__.py  dataframe.py  visualization.py
zoya/desktop/: __init__.py
zoya/devops/: __init__.py  ci.py  deploy.py
zoya/enterprise/: __init__.py
zoya/export/: __init__.py
zoya/ide/: __init__.py  completion.py  debug.py  docs.py  generation.py  refactor.py  review.py
zoya/marketplace/: __init__.py
zoya/mobile/: __init__.py  gestures.py
zoya/robotics/: __init__.py
zoya/security/: __init__.py  encryption.py  validation.py
zoya/stdlib/: __init__.py  ai.py  audio.py  collections.py  csv.py  database.py  datetime_.py  file.py  game.py  game3d.py  http.py  io.py  json.py  math.py  network.py  physics.py  random.py  regex.py  string.py  subprocess.py  system.py  time.py  xml.py
zoya/tools/: __init__.py  debugger.py  docs.py  formatter.py  linter.py  profiler.py  project_generator.py
zoya/visual/: __init__.py
zoya/web/: __init__.py  middleware.py  (+2 more)
zoya_cli/: __init__.py  __main__.py  _meta.py  cli.py
zoya_studio/: README.md  __init__.py  __main__.py  app.tcss
(+74 files in other folders)
