[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoya3"
version = "4.0.0"
description = "Zoya Easy Code — Full-stack Python development platform with TUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["zoya", "framework", "web", "ai", "data", "python"]
authors = [
    {name = "Zoya Team"},
]

dependencies = [
    "textual>=8.0.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
games = ["pygame-ce>=2.5.0"]
ai = ["openai>=1.0.0", "anthropic>=0.30.0"]
all = ["pygame-ce>=2.5.0", "openai>=1.0.0", "anthropic>=0.30.0"]

[project.scripts]
zoya3 = "zoya_tui:main"

[project.urls]
Homepage = "https://github.com/notebookworrk-cyber/zoya-easy-code"
Source = "https://github.com/notebookworrk-cyber/zoya-easy-code"

[tool.setuptools.packages.find]
include = ["zoya*"]

[tool.setuptools]
py-modules = ["zoya_tui", "zoya_cli"]
